Encapsulate header's logo link to the left

--- a/views/components/header.html
+++ b/views/components/header.html
@@ -1,5 +1,5 @@
 <header data-sm="2column">
-	<header-left>
+	<header-left data-sm="left">
 		<a data-sm="column" href="/">
 			<img
 				data-sm="middle"
