Add quotes around doted key name
the new STE follows JavaScript conventions and key with special characters must be quoted

--- a/views/components/main-tutorial.html
+++ b/views/components/main-tutorial.html
@@ -20,7 +20,7 @@
 					<ul>
 						{{#each1 value}}
 						<li>
-							<a href="/tutorial/{{href}}">{{metadata.subcategory}}</a>
+							<a href="/tutorial/{{href}}">{{"metadata.subcategory"}}</a>
 						</li>
 						{{/each1}}
 					</ul>
